# vox

./: .env.example  .gitignore  .gitlab-ci.yml  .vox_gamify.db-wal  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  Vox.toml  bundle_err.txt  bundle_err2.txt  bundle_err3.txt  bundle_err4.txt  bundle_out.txt  bundle_out2.txt  bundle_out3.txt  bundle_out4.txt  cliff.toml  continue_prompt.md  deny.toml  docker-compose.yml  opencode.json  ssg_test.vox  temp_tools.md  test.vox  test_all.txt  test_out.txt  test_output.txt  test_wf.txt  toestub_self_apply.ps1  vox-agent.json  vox-schema.json  vox_completeness_audit_update.md
.agents/workflows/: cargo-safety.md  toestub-check.md
.cargo/: config.toml
.config/: nextest.toml
.cursor/rules/: build-environment.mdc
.github/workflows/: ci.yml  docs-deploy.yml  ml_data_extraction.yml
.opencode/: README.md  package-lock.json  tsconfig.json
.opencode/agents/: orchestrator.md  visualizer.md
.opencode/scripts/: check-versions.ts  review.ts  spawn-agents.ts  status.ts
.opencode/skills/: error-handling.md  testing-patterns.md  vox-pipeline.md
.vox_modules/: local_store.db
crates/vox-ast/: Cargo.toml  README.md
crates/vox-cli/: Cargo.toml  README.md
crates/vox-cli/src/: autofix.rs  cli_actions.rs  fs_utils.rs  main.rs  pipeline.rs  templates.rs  v0.rs  watcher.rs
crates/vox-cli/src/commands/: agent.rs  architect.rs  build.rs  bundle.rs  chat.rs  check.rs  container.rs  corpus.rs  dashboard.rs  db.rs  deploy.rs  deploy_infra.rs  dev.rs  doc.rs  doctor.rs  fmt.rs  gamify.rs  generate.rs  hud.rs  info.rs  init.rs  install.rs  learn.rs  live.rs  login.rs  logout.rs  lsp.rs  mod.rs  orchestrator.rs  publish.rs  remove.rs  review.rs  run.rs  search.rs  setup.rs  share.rs  skill.rs  snippet.rs  status.rs  stub_check.rs  (+6 more)
crates/vox-cli/src/commands/serve_dashboard/: AgentBuilder.tsx  FeedbackPanel.tsx  Marketplace.tsx  SkillBrowser.tsx  SnippetArchive.tsx  WorkflowBrowser.tsx  api.rs  dashboard.tsx  index.css  main.tsx  mod.rs
crates/vox-cli/src/training/: datagen.rs  mod.rs  native.rs
crates/vox-codegen-llvm/: Cargo.toml
crates/vox-codegen-rust/: Cargo.toml  README.md
crates/vox-codegen-ts/: Cargo.toml  README.md
crates/vox-codegen-wasm/: Cargo.toml
crates/vox-config/: Cargo.toml
crates/vox-container/: Cargo.toml
crates/vox-db/: Cargo.toml  README.md
crates/vox-db/src/: auto_migrate.rs  collection.rs  config.rs  data_flow.rs  ddl.rs  error_enrichment.rs  learning.rs  lib.rs  migration.rs  paths.rs  retrieval.rs  schema_digest.rs
crates/vox-doc-pipeline/: README.md
crates/vox-eval/: Cargo.toml
crates/vox-fmt/: Cargo.toml
crates/vox-forge/: Cargo.toml
crates/vox-gamify/: Cargo.toml  README.md
crates/vox-git/: Cargo.toml
crates/vox-hir/: Cargo.toml  README.md
crates/vox-integration-tests/: Cargo.toml  README.md
crates/vox-integration-tests/src/: lib.rs
crates/vox-integration-tests/tests/: agent_mcp_roundtrip.rs  agent_message.rs  chatbot_integration.rs  codegen_rust.rs  db_typeck.rs  greaterfool_parity_gates.rs  keyframes_theme.rs  multimodal_image_gen.rs  orchestrator_e2e.rs  parity_contracts.rs  pipeline.rs  prompt_canonical_guardrails.rs  skill_install_test.rs  stream_emit.rs  test_hang.rs  traits.rs  typeck.rs  venv_detection.rs  while_trycatch.rs  workflow_integration.rs  workflow_recovery.rs
crates/vox-lexer/: Cargo.toml  README.md
crates/vox-lsp/: Cargo.toml  README.md  rustc.err
crates/vox-lsp/src/: grammar.rs  lib.rs  main.rs
crates/vox-lsp/tests/: definition_test.rs
crates/vox-mcp/: Cargo.toml
crates/vox-orchestrator/: Cargo.toml  README.md
crates/vox-parser/: Cargo.toml  README.md
crates/vox-pm/: Cargo.toml
crates/vox-pm/src/: artifact_cache.rs  cache.rs  feedback.rs  hash.rs  lib.rs  lockfile.rs  manifest.rs  namespace.rs  populi.rs  registry.rs  registry_server.rs  resolver.rs  schema.rs  store.rs  workspace.rs
crates/vox-runtime/: Cargo.toml
crates/vox-skills/: Cargo.toml
crates/vox-ssg/: Cargo.toml
crates/vox-tensor/: Cargo.toml
crates/vox-tensor/src/: data.rs  lib.rs  lora.rs  nn.rs  optim.rs  tensor.rs  train.rs
crates/vox-tensor/tests/: nn_tests.rs  train_smoke_test.rs
crates/vox-test-harness/: Cargo.toml
crates/vox-toestub/: Cargo.toml  README.md
crates/vox-typeck/: Cargo.toml  README.md
dist1/: App.tsx  Chat.css  Chat.tsx  server.ts
docs/: book.toml  mcp-tool-reference.md  memory_system.md  security_model.md  session_management.md  skill_marketplace.md  troubleshooting-faq.md  video-walkthrough-script.md  webhook_integration.md
examples/: actor.vox  agent.vox  chatbot.vox  chatbot_pipeline.vox  chatbot_server_fn.vox  dashboard.vox  data_layer.vox  durable_counter.vox  durable_execution.vox  greaterfool_reference.vox  mcp_tool.vox  pytorch_inference.vox  server_fn.vox  sharing.vox  simple_server_fn.vox  testing.vox  workflow.vox
scripts/: run_populi_pipeline.ps1
vox-vscode/: README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+476 files in other folders)
