[package]
name = "vox-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vox"
path = "src/main.rs"

[dependencies]
vox-lexer = { workspace = true }
vox-ast = { workspace = true }
vox-parser = { workspace = true }
vox-hir = { workspace = true }
vox-typeck = { workspace = true }
vox-codegen-ts = { workspace = true }
vox-codegen-rust = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
vox-pm = { workspace = true }
logos = { workspace = true }
