[package]
name = "vox-pm"
version.workspace = true
edition.workspace = true

[dependencies]
vox-ast = { workspace = true }
vox-hir = { workspace = true }
rusqlite = { workspace = true }
sha3 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
data-encoding = { workspace = true }
thiserror = { workspace = true }
